--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
     <link rel="stylesheet" href="./mystyle.css">
     <title>PMDesigns</title>
 </head>
+<header>
+
+</header>
 <body>
     <nav>
         <input type="checkbox" id="check">
         <label for="check" class="checkbtn">
           <i class="fas fa-bars"></i>
         </label>
-        <label class="logo"> I_.|._I - PAT MILLS - I_.|._I </label>
+        <label class="logo"> _.|._ PAT MILLS _.|._ </label>
         <ul>
           <li><a class="active" href="#aboutme">Home</a></li>
           <li><a href="#aboutme">About Me</a></li>
@@ -63,11 +66,10 @@
                         <P>This Is Where I Will List My Contact Info</P>
                         </div>
                 </section>
-
-        
-        </section>
-
-        
     </main>
 </body>
+
+<footer>
+    <h2>Made By Pat Mills Designs</h2>
+</footer>
 </html>
