--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <main>
         <section>
         <section id="aboutme">
-            <h1>About Me</h1>
+            <h1>Dean Mills Website</h1>
             <img src="https://media-exp1.licdn.com/dms/image/C4E03AQEvrvleF3WxAQ/profile-displayphoto-shrink_800_800/0/1573601673289?e=1634774400&v=beta&t=XSUdIE7utF0ICEhfqLUOEQe1nFWHoPBuJTj2iyZI5ao">
             <h2>Hi, My name is Pat Mills, I'm relatively new to coding and currently working my way through the boot camp
                 program at UNCC. I look forward to a bright future in IT and I am eager to continue to learn and grow my 
